Added bounds plot to monotonic/siads.tex
Also changed comments and plot labels for like_gun/calc.py

--- a/monotonic/siads.tex
+++ b/monotonic/siads.tex
@@ -19,12 +19,33 @@
   the same probability with respect to a norm.
 \end{abstract}
 
+\section*{To Do:}
+\label{sec:do}
+
+\begin{itemize}
+\item Pictures of allowed pairs
+\item Code that calculates for given $\Delta$:
+  \begin{itemize}
+  \item Stationary distribution
+  \item Conditional distribution ofter $n$ steps or after $\Delta t$
+  \end{itemize}
+
+\end{itemize}
+\begin{figure*}
+  \centering
+  \resizebox{0.75\textwidth}{!}{\includegraphics{bounds.pdf}}
+  \caption{Bounds on allowed functions}
+  \label{fig:mt2}
+\end{figure*}
+
 \section{Introduction}
 \label{sec:introduction}
 \begin{description}
 \item[Motivation:] Priors for regions in function space constrained by
-  physical laws
-\item[Connection to Information Theory:] Theorem 8 of Shannon
+  physical laws.  Cite Hixson2000, Fritz1996,
+  Pemberton2011LA-UR-11-04999, and FraserLA-UR-13-21824
+\item[Connection to Information Theory:] Theorem 8 of Shannon.  Define
+  stationary and Markov for discrete time discrete value process.
 \item[Connection to Statistical Mechanics:] Jaynes maximum entropy
   derivation of Maxwell Boltzmann distribution.  Coordinate dependent.
 \item[Connection to path integrals:]
